# mini_openai

./: Cargo.toml  LICENSE  README.md
examples/: sync.rs
examples/async/: chat_completion.rs  embedding.rs  json.rs
examples/sync/: embedding.rs  json.rs
src/: lib.rs
