[package]
name = "mini-openai"
version = "0.1.0"
edition = "2021"

[features]
reqwest = ["dep:reqwest"]
ureq = ["dep:ureq"]

[dependencies]
serde = { version = ">= 1.0", features = ["derive"] }
serde_json = ">= 1.0"
thiserror = "1.0.64"
reqwest = { version = "0.12.8", optional = true }
ureq = { version = "2.10.1", optional = true }

[dev-dependencies]
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "async-chat-completion"
path = "examples/async/chat_completion.rs"
required-features = ["reqwest"]

[[example]]
name = "sync-chat-completion"
path = "examples/sync/chat_completion.rs"
required-features = ["ureq"]

[[example]]
name = "async-embedding"
path = "examples/async/embedding.rs"
required-features = ["reqwest"]

[[example]]
name = "sync-embedding"
path = "examples/sync/embedding.rs"
required-features = ["ureq"]

[[example]]
name = "async-json"
path = "examples/async/json.rs"
required-features = ["reqwest"]

[[example]]
name = "sync-json"
path = "examples/sync/json.rs"
required-features = ["ureq"]
